[project]
name = "llm-toolbox"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "anthropic==0.26.1",
    "ccy==1.3.1",
    "decorator==5.1.1",
    "dill==0.3.8",
    "dotenv>=0.9.9",
    "geopy==2.4.1",
    "holidays==0.51",
    "httpx==0.27.2",
    "huggingface-hub==0.23.4",
    "jsonschema==4.19.2",
    "langchain==0.1.3",
    "networkx==3.2.1",
    "numpy==1.26.4",
    "openai==1.17.0",
    "phonenumbers==8.13.39",
    "pint==0.23",
    "polars==0.20.31",
    "pydantic==2.7.4",
    "pyyaml==6.0.1",
    "rapidfuzz==3.9.3",
    "requests==2.32.3",
    "rouge-score==0.1.2",
    "scipy==1.13.1",
    "sentencepiece==0.2.0",
    "strenum==0.4.15",
    "tenacity==8.4.1",
    "tensorflow>=2.18.1",
    "transformers==4.41.2",
    "tree-sitter==0.22.3",
    "tree-sitter-languages==1.10.2",
    "typing-extensions==4.12.2",
    "vertexai==1.49.0",
]

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "seaborn>=0.13.2",
]
